--- a/layout-3/layout-3.css
+++ b/layout-3/layout-3.css
@@ -1,3 +1,159 @@
 * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: "Google Sans Flex", sans-serif;
+    color: #111827;
+}
+
+body {
+    background-color: #FFFFFF;
+}
+
+.appointment {
+    height: 100vh;
+    padding: 40px 80px;
+}
+
+.appointment__section {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr 5fr; 
+    gap: 40px;
+}
+
+.appointment__header {
+    display: grid;
+    /* padding: 8px 16px; */
+}
+
+.appointment__header h1 {
+    align-self: start;
+    font-weight: 700;
+    font-size: 32px;
+}
+
+.appointment__header p {
+    align-self: end;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.appointment__form {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: 
+    "name name date date"
+    "email email message message"
+    "phone phone message message"
+    ". . submit submit";
+    gap: 20px;
+}
+
+.appointment__label {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.appointment__input {
+    width: 100%;
+    background-color: #F6F9FF;
+    border: solid 1px #EEF4FF;
+    color: #C8C8C8;
+    border-radius: 5px;
+    height: 51px;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 12px;
+}
+
+.appointment__select {
+    width: 100%;
+    background-color: #F6F9FF;
+    border: solid 1px #EEF4FF;
+    color: #C8C8C8;
+    border-radius: 5px;
+    height: 51px;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 12px;
+}
+
+.appointment__name-container {
+    grid-area: name;
+}
+
+.appointment__email-container {
+    grid-area: email;
+}
+
+/* ----- PHONE ----- */
+.appointment__phone-container {
+    grid-area: phone;
+    display: grid;
+    grid-template-columns: 1fr 7fr;
+    grid-template-rows: auto;
     
 }
+
+.appointment__label--phone {
+    grid-column: 1 / 3;
+}
+
+.appointment__select--country {
+    grid-column: 1 / 2;
+    color: #111827;
+    text-align: center;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.appointment__input--phone {
+    grid-column: 2 / 3;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/* ----- DATE ----- */
+.appointment__date-container {
+    grid-area: date;
+}
+
+.appointment__select--date {
+    color: #111827;
+}
+
+/* ----- MESSAGE ----- */
+.appointment__message-container {
+    grid-area: message;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+}
+
+.appointment__textarea--message {
+    background-color: #F6F9FF;
+    border: solid 1px #EEF4FF;
+    color: #111827;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 12px;
+    resize: none;
+}
+
+/* ----- SUBMIT ----- */
+.appointment__button-submit {
+    grid-area: submit;
+    margin-top: 20px;
+    width: 25%;
+    justify-self: end;
+    border-radius: 5px;
+    color: #FFFFFF;
+    background-color: #3B82F6;
+    border: none;
+}
+
+
