Update HTML and CSS with structure and all styles for the fourth layout

--- a/layout-3/layout-3.css
+++ b/layout-3/layout-3.css
@@ -144,6 +144,10 @@ body {
     resize: none;
 }
 
+.appointment__textarea--message::placeholder {
+    color: #111827;
+}
+
 /* ----- SUBMIT ----- */
 .appointment__button-submit {
     grid-area: submit;
